--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
+      "name": "python3",
+      "display_name": "Python 3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -25,7 +24,8 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "include_colab_link": true
-    }
+    },
+    "accelerator": "TPU"
   },
   "cells": [
     {
@@ -85,7 +85,7 @@
       "metadata": {
         "id": "yhelclcDjUqV",
         "colab_type": "code",
-        "outputId": "cd5d6ce7-da09-4c9b-b991-31594c31ff8e",
+        "outputId": "8f2db68d-4420-4cc0-f2b7-9ad40b54050d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -94,7 +94,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +164,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -197,21 +197,21 @@
       "metadata": {
         "id": "wi6n5jyhjUqg",
         "colab_type": "code",
-        "outputId": "631d4acb-370d-4f35-d050-36324678bb4e",
+        "outputId": "25546da1-78a1-4c87-8c9d-8cccd7a09225",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "print('There are 25000 copora'.format(reviews.shape))"
+        "print('There are {} copora'.format(reviews.shape))"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "There are 25000 copora\n"
+            "There are (25000,) copora\n"
           ],
           "name": "stdout"
         }
@@ -222,7 +222,7 @@
       "metadata": {
         "id": "P4UOqAfvjUqj",
         "colab_type": "code",
-        "outputId": "1c99388a-bcf9-4d81-afee-b1055b1d4e4a",
+        "outputId": "0e805b11-26c8-4bd1-dc2d-c5517071e4bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 139
@@ -231,7 +231,7 @@
       "source": [
         "reviews.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -271,7 +271,7 @@
       "metadata": {
         "id": "dFucwVmfjUqo",
         "colab_type": "code",
-        "outputId": "16cbafb9-dab7-4838-ccf6-ca45e83e9a46",
+        "outputId": "86bb96e0-5b54-4614-8cf5-7123df2ea436",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -280,7 +280,7 @@
       "source": [
         "vect.fit(reviews)"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -297,7 +297,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -319,7 +319,7 @@
       "metadata": {
         "id": "GLZGJN25jUqv",
         "colab_type": "code",
-        "outputId": "af58b0d2-9c2c-4a6a-ec6b-c33567237c1f",
+        "outputId": "e4038d30-e9ea-497c-a10f-b035856bbd3f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -329,7 +329,7 @@
         "featres_name = vect.get_feature_names()\n",
         "featres_name[:100]"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +440,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "eRzWbfrUjUqz",
         "colab_type": "code",
-        "outputId": "83cc5888-4178-445f-c3ab-895a67dcc620",
+        "outputId": "a3b9d1d7-a160-4cf7-b609-973e5f85b645",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -459,7 +459,7 @@
         "# how many tokens? \n",
         "len(featres_name)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -480,7 +480,7 @@
       "metadata": {
         "id": "6d5gEpIKjUq1",
         "colab_type": "code",
-        "outputId": "51a430e9-a5eb-4223-9f01-fe8e05295d52",
+        "outputId": "7d1d1c6e-0392-4955-b43a-5faa311239ff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 136
@@ -489,7 +489,7 @@
       "source": [
         "reviews_dtm.toarray()"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -529,7 +529,7 @@
       "metadata": {
         "id": "Zjw-KXdPjUq6",
         "colab_type": "code",
-        "outputId": "e6977dd7-bfce-40b9-bb71-b6afd0ad8896",
+        "outputId": "53a4cd66-c0d2-40bf-8bdf-2774b223a8ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
@@ -538,7 +538,7 @@
       "source": [
         "reviews_df.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1085,43 +1085,46 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iWeKwKEKjUq9",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "%time\n",
-        "feature_df = reviews_df.loc[:,featres_name]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "nz3rEqpTjUrA",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "10f7c7a0-9282-45dc-f905-fc52c4cd9509"
       },
       "source": [
         "type(featres_name)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "pfSZ7ehxjUrD",
         "colab_type": "code",
-        "outputId": "bf6629fe-344d-4d5c-b59f-75fe9fff6c07",
+        "outputId": "e63de39f-7327-40c6-aa46-f4f4f0c0dc4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1131,13 +1134,13 @@
         "%time\n",
         "feature_sum = reviews_df.sum(axis=0)"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 1e+03 ns, sys: 1e+03 ns, total: 2 µs\n",
-            "Wall time: 5.01 µs\n"
+            "CPU times: user 2 µs, sys: 2 µs, total: 4 µs\n",
+            "Wall time: 7.87 µs\n"
           ],
           "name": "stdout"
         }
@@ -1161,7 +1164,7 @@
       "metadata": {
         "id": "hMs5zirfjUrM",
         "colab_type": "code",
-        "outputId": "7ebd958e-3b1b-4997-dba7-b777f4b8bd31",
+        "outputId": "25d95d13-8c28-4d96-fa52-0ee5ecfde635",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1170,19 +1173,19 @@
       "source": [
         "feature_counts[:100].plot(kind='barh', figsize=(18,28))"
       ],
-      "execution_count": 0,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f26a8880128>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f24b476a4a8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 19
         },
         {
           "output_type": "display_data",
@@ -1204,7 +1207,7 @@
       "metadata": {
         "id": "hapQwyotmMlh",
         "colab_type": "code",
-        "outputId": "fcd920cf-ea09-4cc5-cda1-234e92ae5957",
+        "outputId": "821a25b7-7892-43d1-ae87-1e3ba2d18fd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1213,7 +1216,7 @@
       "source": [
         "pip install nltk"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1230,7 +1233,7 @@
       "metadata": {
         "id": "gSZoJHbgmYYD",
         "colab_type": "code",
-        "outputId": "cc7772f2-76a3-41b6-aab2-a77a4adae302",
+        "outputId": "ea30e3e3-72fb-47ef-ccf2-582861b85d73",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -1240,7 +1243,7 @@
         "import nltk\n",
         "nltk.download('stopwords')"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1260,7 +1263,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 21
         }
       ]
     },
@@ -1283,7 +1286,7 @@
       "metadata": {
         "id": "F9__TLAWmHCU",
         "colab_type": "code",
-        "outputId": "46995431-70a3-4a6c-f87c-f1d59f69b20f",
+        "outputId": "26af8331-9151-4717-b360-a63abe21d4f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1297,7 +1300,7 @@
         "        count +=1\n",
         "print(count)"
       ],
-      "execution_count": 0,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
