--- a/notebooks/4and5gram models.ipynb
+++ b/notebooks/4and5gram models.ipynb
@@ -108,6 +108,148 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Bigram Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a dictionary of dictionaries\n",
+    "# the inner function will take on counts (frequencies) \n",
+    "# for probabilities\n",
+    "bigram_model = defaultdict(lambda: defaultdict(lambda: 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill up the dictionary\n",
+    "for word1, word2 in ngrams(tokens, 2):\n",
+    "     # increase the count (frequency of tokens)\n",
+    "    bigram_model[word1][word2] += 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transform the counts into probabilities\n",
+    "for word1 in bigram_model:\n",
+    "    #print(word1)\n",
+    "    # sum freq of all the first 3 word combos of each phrase\n",
+    "    total_count = float(sum(bigram_model[word1].values()))\n",
+    "    # get each fourth word and divide each frequency by total count\n",
+    "    # for conditional probabilities\n",
+    "    for word2 in four_gram_model[word1]:\n",
+    "        # get the probability\n",
+    "        # four_gram_model[word1_word2_word3]/total_count\n",
+    "        bigram_model[word1][word2] /= total_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive User Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trigram Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a dictionary of dictionaries\n",
+    "# the inner function will take on counts (frequencies) \n",
+    "# for probabilities\n",
+    "trigram_model = defaultdict(lambda: defaultdict(lambda: 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill up the dictionary\n",
+    "for word1, word2, word3 in ngrams(tokens, 3):\n",
+    "     # increase the count (frequency of tokens)\n",
+    "    trigram_model[word1, word2][word3] += 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transform the counts into probabilities\n",
+    "for word1_word2 in trigram_model:\n",
+    "    #print(word1_word2_word3)\n",
+    "    # sum freq of all the first 3 word combos of each phrase\n",
+    "    total_count = float(sum(trigram_model[word1_word2].values()))\n",
+    "    # get each fourth word and divide each frequency by total count\n",
+    "    # for conditional probabilities\n",
+    "    for word3 in trigram_model[word1_word2]:\n",
+    "        # get the probability\n",
+    "        # four_gram_model[word1_word2_word3]/total_count\n",
+    "        trigram_model[word1_word2][word3] /= total_count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive User Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4-gram model "
    ]
   },
@@ -158,15 +300,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interactive Model Here"
+    "## Interactive User Input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter 4 words pleasehi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'hi'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##\n",
+    "input('Enter 4 words please')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -214,7 +377,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interactive Model Here"
+    "## Interactive User Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Would like to have it be ----\n",
+    "'Enter 1 - 4 words please:'\n",
+    "The model would tokenize the phrase \n",
+    "According to length, apply the appropriate model"
    ]
   },
   {
