update n-gram model with bigram and trigram and save models

--- a/notebooks/N-gram_model_(bigram_trigram)_with_explanation.ipynb
+++ b/notebooks/N-gram_model_(bigram_trigram)_with_explanation.ipynb
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.13 ms\n"
+      "Wall time: 3.99 ms\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "create a function to build a bigram model"
+    "create a function to build a default dictionary. It is used for saving the model with `pickle` library"
    ]
   },
   {
@@ -123,8 +123,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def default_dict():\n",
+    "    return defaultdict(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create a function to build a bigram model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def build_bigram_model():\n",
-    "    bigram_model = defaultdict(lambda: defaultdict(lambda: 0))  # create a model mold\n",
+    "    bigram_model = defaultdict(default_dict)  # create a model mold\n",
     "    for sentence in sentences_tokens: # in every sentence\n",
     "        clean_sentence = [word.lower() for word in sentence if word.isalpha()] #get alpha only\n",
     "        # Collect all bigrams counts for (w1, w2)\n",
@@ -149,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +258,7 @@
        "'with'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,12 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_trigram_model():\n",
-    "    trigram_model = defaultdict(lambda: defaultdict(lambda: 0)) # create a model mold\n",
+    "    trigram_model = defaultdict(default_dict)  # create a model mold\n",
     "    for sentence in sentences_tokens: # in every sentence\n",
     "        clean_sentence = [word.lower() for word in sentence if word.isalpha()] #get alpha only\n",
     "        # Collect all bigrams counts for (w1, w2)\n",
@@ -297,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +443,7 @@
        "'with'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,11 +463,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save and load model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The n-gram model has high computation cost. To increase the efficiency, the model should be save after it has been trained."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pip install dill==0.2.7.1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "save the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dill\n",
+    "with open('trigram_model.p', 'wb') as file:\n",
+    "    dill.dump(trigram_model, file, protocol=dill.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "with open('bigram_model.p', 'wb') as file:\n",
+    "    dill.dump(bigram_model, file, protocol=dill.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#with open('bigram_model.p', 'rb') as file:\n",
+    "#    bigram_model = dill.load(file)\n",
+    "#with open('bigram_model.p', 'rb') as file:\n",
+    "#    trigram_model = dill.load(file)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
