update math equation for ngram models

--- a/notebooks/N-gram_model_(bigram_trigram)_with_explanation.ipynb
+++ b/notebooks/N-gram_model_(bigram_trigram)_with_explanation.ipynb
@@ -49,9 +49,9 @@
     "> $P(w_{n} | w_{n-N+1}, w_{n-N},..., w_{n-1})$ where $w_{n-N+1}, w_{n-N},..., w_{n-1}$ is the context words\n",
     "\n",
     "__Equations for n-grams__:  \n",
-    "> bigram (N=1)  -  $P(w_{n}| w_{n-1})$  \n",
-    "  trigram (N=2) -  $P(w_{n}| w_{n-2}, w_{n-1})$  \n",
-    "  4-gram  (N=3) -  $P(w_{n}| w_{n-3}, w_{n-2}, w_{n-1})$  "
+    "> bigram (N=1)  :  $P(w_{n}| w_{n-1})$  \n",
+    "  trigram (N=2) :  $P(w_{n}| w_{n-2}, w_{n-1})$  \n",
+    "  4-gram  (N=3) :  $P(w_{n}| w_{n-3}, w_{n-2}, w_{n-1})$  "
    ]
   },
   {
