update application files

--- a/application/models_in_production.ipynb
+++ b/application/models_in_production.ipynb
@@ -38,6 +38,17 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install anvil-uplink"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -45,17 +56,10 @@
      "text": [
       "Using TensorFlow backend.\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 7.99 s\n"
-     ]
     }
    ],
    "source": [
-    "%%time\n",
+    "# %%time\n",
     "import keras # for sentitment model\n",
     "import tensorflow as tf  # to resolve the loading issue with different version of keras\n",
     "from nltk.tokenize import RegexpTokenizer\n",
@@ -67,7 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext memory_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +103,7 @@
       "Trainable params: 1,280,129\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
-      "Wall time: 721 ms\n"
+      "Wall time: 448 ms\n"
      ]
     }
    ],
@@ -104,19 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2.93 s\n"
+      "peak memory: 983.67 MiB, increment: 707.27 MiB\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%memit\n",
+    "# %%time\n",
     "# load the tfidf_vectorizer from disk\n",
     "filename = 'models/tfidf_vectorizer.sav'\n",
     "tfidf_vectorizer = pickle.load(open(filename, 'rb'))\n",
@@ -128,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +168,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "keras_predict_sentiment(\"\"\"\"\"\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -162,19 +196,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install memory_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 12s\n"
+      "loading language model....\n",
+      "loading language model....done!\n",
+      "peak memory: 10246.54 MiB, increment: 9344.68 MiB\n"
      ]
     }
    ],
    "source": [
-    "%%time\n",
+    "%%memit\n",
+    "print('loading language model....')\n",
+    "# %%time\n",
     "# Load models\n",
     "with open('models/bigram_model.p', 'rb') as file:\n",
     "   bigram_model = dill.load(file)\n",
@@ -186,12 +233,13 @@
     "   fivegram_model = dill.load(file)\n",
     "\n",
     "# define tokenizer to get words\n",
-    "tokenizer = RegexpTokenizer(r'\\w+')"
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "print('loading language model....done!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,13 +306,13 @@
     "        most_likely = max(prob_list)\n",
     "        # get the predicted word(s)\n",
     "        pred_words = [word for word, prob in fourgram_model[words[0], words[1], words[2]].items() if prob == most_likely]\n",
-    "        pred_word = random.choice(pred_words)\n",
+    "#         pred_word = random.choice(pred_words)\n",
     "    return pred_words[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,33 +369,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ngram_prediction(text):\n",
+    "# for AWS EC2\n",
+    "def bigram_prediction(text):\n",
     "    \"\"\"\n",
     "    expect: a raw string of text\n",
-    "    modify: tokenize the string and # check the length to decide to start with which model.\n",
-    "            1. if the string has 4 tokens or above, take the last four tokens as input to fivegram_model\n",
-    "            2. if the string has 3 tokens, take the list of tokens as input to fourgram_model\n",
-    "            3. if the string has 2 tokens, take the list of tokens as input to trigram_model\n",
-    "            4. if the string has 1 token, take the token as input to bigram_model\n",
+    "    modify: tokenize the string and take the token as input to bigram_model\n",
     "    return: predicted word\n",
     "    \"\"\"\n",
     "    # tokenize the words\n",
     "    user_tokens = tokenizer.tokenize(text)\n",
-    "    if len(user_tokens) >= 4:\n",
-    "        try:\n",
-    "            return fivegram_predict_next_word(user_tokens[-4:]) # take the last four tokens\n",
-    "        except:    \n",
-    "            return fivegram_predict_next_word(user_tokens) # take the four tokens\n",
-    "    elif len(user_tokens) == 3:\n",
-    "        return fourgram_predict_next_word(user_tokens)\n",
-    "    elif len(user_tokens) == 2:\n",
-    "        return trigram_predict_next_word(user_tokens)\n",
-    "    elif len(user_tokens) == 1:\n",
-    "        return bigram_predict_next_word(user_tokens) "
+    "    return bigram_predict_next_word(user_tokens) "
    ]
   },
   {
@@ -359,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -368,34 +403,25 @@
      "text": [
       "Connecting to wss://anvil.works/uplink\n",
       "Anvil websocket open\n",
-      "Authenticated OK\n"
+      "Authenticated OK\n",
+      "final step is running\n",
+      "peak memory: 9469.51 MiB, increment: 9.81 MiB\n"
      ]
     }
    ],
    "source": [
+    "%%memit\n",
     "import anvil.server\n",
     "\n",
-    "anvil.server.connect(\"3V3UIWCX7QXD7PQE7SUKSGH7-PDHT24SNT663M2H7\")"
+    "anvil.server.connect(\"5XCZTEH4WBSLT3RDLI2IQREG-GKBVYFFZHDHXUDBJ\")\n",
+    "print('final step is running')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-17-139f826f7c1d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mpred_word\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpred_class\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[0manvil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mserver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwait_forever\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\anvil\\server.py\u001b[0m in \u001b[0;36mwait_forever\u001b[1;34m()\u001b[0m\n\u001b[0;32m    313\u001b[0m     \u001b[0m_get_connection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    314\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 315\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "@anvil.server.callable\n",
     "# Put the function that will be used in anvil client server (web)\n",
